# guideforge-agent

./: .gitignore  LICENSE  README.md  app.py  web_app.py
backend/app/services/rag/server/: pyproject.toml  test_connection.py
backend/app/services/rag/server/rag/: .env.example  __init__.py  answer_service.py  requirements.txt  service.py
backend/app/services/rag/server/rag/agents/: qa_agent.py  ue_dev_agent.py
backend/app/services/rag/server/rag/agents/shared/: rag_client.py
backend/app/services/rag/server/rag/config/: settings.yaml
backend/app/services/rag/server/rag/indexers/: asset_indexer.py  cpp_indexer.py  doc_indexer.py
backend/app/services/rag/server/rag/modular/config/: settings.yaml
backend/app/services/rag/server/rag/pageindex/scripts/: build_index.py
backend/app/services/rag/server/rag/retriever/: __init__.py  modular_backend.py  retriever.py
backend/app/services/rag/server/rag/scripts/: build_modular_indexes.py  run_collection.sh  simple_rag_query.py  test_pageindex.py
backend/app/services/rag/server/rag/scripts/collectors/: collect_markdown.py  collect_udn.py
backend/app/services/rag/server/rag/scripts/converters/: udn_to_markdown.py
backend/app/services/rag/server/src/unreal_agent_mcp/: __init__.py  __main__.py  app.py  http_server.py  knowledge_store.py  server.py
backend/app/services/rag/server/src/unreal_agent_mcp/tools/: __init__.py  actors.py  asset_query.py  asset_write.py  batch_ops.py  blueprints.py  build.py  context.py  editor.py  events.py  project.py  properties.py  python.py  rag.py  scene_analysis.py  screenshots.py  (+2 more)
(+126 files in other folders)
